# crypto-float-monitor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build_appimage.sh
src/bitcoin_float_monitor/: __init__.py  config.py  main.py  widget.py
src/crypto_float_monitor/: __init__.py  binance_client.py  config.py  main.py  widget.py
src/crypto_float_monitor/assets/: __init__.py
