[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-float-monitor"
version = "0.1.0"
description = "Floating desktop widget that shows real-time Bitcoin price from Binance"
readme = "README.md"
authors = [
    { name = "Fabio" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-Qt6>=6.6",
    "websocket-client>=1.7",
]

[project.scripts]
crypto-float-monitor = "crypto_float_monitor.main:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
"crypto_float_monitor" = ["assets/*.mp3"]
